--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="col-lg-12 col-md-12 site-title animate__animated animate__fadeInDown">
                 <h1 class="">Hey! I'm Grace.</h1>
                 <img src="./img/blueline2.png" alt="">
-                <h4>Freelance graphic designer and developer.</h4>
+                <h4>Graphic designer and developer</h4>
                 
                 <p style="text-align: center;">
                     <a href="https://discord.gg/zpJaC5Y" target="_blank"><span style="text-align: center; margin-left: -30px;" class="fab fa-discord" ></span></a>
@@ -114,29 +114,29 @@
                 <div class="col-lg-4 col-md-8 col-sm-12">
 
                     <div class="services-text1">
-                        <h3>MINECRAFT GRAPHICS</h3>
-                        <p>I render custom Minecraft skins and add graphic effects to them in Photoshop.</p>
+                        <h3>JAVA</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-8 col-sm-12">
 
                     <div class="services-text2">
-                        <h3>VECTOR DESIGN</h3>
-                        <p>I create logos, mascot graphics, etc. as vectors with Illustrator.</p>
+                        <h3>MYSQL</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-8 col-sm-12">
 
                     <div class="services-text3">
                         <h3>WEB DESIGN</h3>
-                        <p>I design good-looking, custom web pages like this one.</p>
+                        <p>I design custom web pages like this one.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-8 col-sm-12 dev-card">
 
                     <div class="services-text6">
                         <h3>UI/UX DESIGN</h3>
-                        <p>I make clean and attractive User Interface designs for your software.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-8 col-sm-12 dev-card">
@@ -150,7 +150,7 @@
 
                     <div class="services-text5">
                         <h3>WEB DEVELOPMENT</h3>
-                        <p>I do front-end web development and code beautiful websites from scratch. (HTML and CSS)</p>
+                        <p>I do front-end web development and code websites from scratch. (HTML, CSS, JS)</p>
                     </div>
                 </div>
                 
@@ -168,7 +168,6 @@
                 <h2>Portfolio</h2>
             </div>
           <div class="col-lg-12 col-md-12 portfolio-img" >
-                <img src="./img/portfoliogallery.png" alt="">
                 <a href="./portfolio.html"><button type="button" class= "btn button portfolio-button">SEE MORE ➜</button></a>
             </div>
 
@@ -184,15 +183,15 @@
             </div>
             <div class="col-lg-12 col-md-12 contact-discord">
                 <h4>PREFERRED - DISCORD <a href="https://discord.gg/zpJaC5Y" target="_blank"><span style="text-align: center; margin-left: -30px;" class="fab fa-discord" ></a> </h4>
-                    <h3>Grace#1317</h3>
+                    <h3>grace#2039</h3>
             </div>
             <div class="col-lg-12 col-md-12 contact-email">
-                <h4>EMAIL <a href="mailto:grqcegfx@gmail.com" target="_blank"><span style="text-align: center; margin-left: -30px;" class="fas fa-envelope" ></a> </h4>
-                    <h3>grqcegfx@gmail.com</h3>
+                <h4>EMAIL <a href="mailto:xgraceyan@gmail.com" target="_blank"><span style="text-align: center; margin-left: -30px;" class="fas fa-envelope" ></a> </h4>
+                    <h3>xgraceyan@gmail.com</h3>
             </div>
             <div class="col-lg-12 col-md-12 contact-twitter">
-                <h4>TWITTER <a href="https://twitter.com/GrqceGFX" target="_blank"><span style="text-align: center; margin-left: -30px;" class="fab fa-twitter" ></a> </h4>
-                    <h3>@GrqceGFX</h3>
+                <h4>TWITTER <a href="https://twitter.com" target="_blank"><span style="text-align: center; margin-left: -30px;" class="fab fa-twitter" ></a> </h4>
+                    <h3>@twitter</h3>
             </div>
         </div>
     </div>
