--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   <a class="nav-link" href="./index.html">HOME <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./portfolio.html">PORTFOLIO</a>
+                  <a class="nav-link" href="#">PORTFOLIO</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">PRICING</a>
@@ -88,8 +88,8 @@
                 
                 <p style="text-align: center;">
                     <a href="https://discord.gg/zpJaC5Y" target="_blank"><span style="text-align: center; margin-left: -30px;" class="fab fa-discord" ></span></a>
-                    <a href="https://twitter.com/GrqceGFX" target="_blank"><span style="text-align: center; " class="fab fa-twitter" ></span></a>
-                    <a href="https://github.com/Grqce" target="_blank"><span style="text-align: center; " class="fab fa-github" ></span></a>
+                    <a href="https://twitter.com" target="_blank"><span style="text-align: center; " class="fab fa-twitter" ></span></a>
+                    <a href="https://github.com/xgraceyan" target="_blank"><span style="text-align: center; " class="fab fa-github" ></span></a>
                 </p>
 
             </div>
